== master

* Change PhoneNumber#to_s to PhoneNumber#display_value

== 0.0.4 / 2008-06-22

* Remove log files from gems

== 0.0.3 / 2008-05-05

* Updated documentation

== 0.0.2 / 2007-09-26

* Move test fixtures out of the test application root directory

== 0.0.1 / 2007-08-21

* Added documentation
* Removed dependency on has_association_helper